--- a/p11.2.in
+++ b/p11.2.in
@@ -1,4 +1,3 @@
 #const t=2.
 
-%tail(on(boat,left); on(fox,left); on(goose,left); on(beans,right)).
-tail(on(boat,right); on(fox,right); on(goose,left); on(beans,right)).
+tail(on(boat,left); on(fox,left); on(goose,left); on(beans,right)).
